<?xml version="1.0" encoding="utf-8"?>
<!-- strings.xml file for devices that use English language -->
<resources>

    <string name="app_name">My SmartHome</string>

    <!-- Strings for MenuActivity -->
    <string name="init_app">Start Application</string>
    <string name="exit_app">Exit</string>
    <string name="tfg_title">FDW - Introducing aspects of geolocation in a smarthome</string>

    <!-- Strings for MainActivity -->
    <string name="gps">Please, enable the GPS</string>
    <string name="home">Home</string>

    <!-- Strings for Login/LogoutActivity -->
    <string name="title_activity_login">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="logout">Log out</string>

    <!-- Strings for ShoppingListActivity -->
    <string name="addItem">Add</string>
    <string name="shoppingList">Shopping list</string>
    <string name="notification">There are supermarkets nearby</string>

    <!-- Strings for AboutUsActivity -->
    <string name="about">About us</string>
    <string name="about_text">This application have been developed as part of the Final Degree Work of
    "Introducing aspects of geolocation in a smarthome"</string>
    <string name="author">Author: Lorena Calabuig Monerris</string>
    <string name="tutor">Tutor: Joan Josep Fons Cors</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_example_places">ExamplePlacesActivity</string>

</resources>
