<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    tools:context="upv.locamo.tfg.smarthome.app.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_upv"
        android:layout_weight="0.23" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tfg_title"
        android:id="@+id/tv_tfg" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/username"
            android:gravity="left"/>

        <EditText
            android:id="@+id/et_user"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:maxLines="1"
            android:singleLine="true"/>


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/password"
            android:imeActionId="@+id/pass"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            style="@style/btnStyleSeagull"
            android:text="@string/register"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>





